--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.60",
+    "@reduxjs/toolkit": "1.6.1",
+    "clsx": "1.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.5",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "redux": "4.1.1",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
