--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "notes-keeper",
   "version": "1.0.0",
+  "homepage": "https://alexandrmisiuk.github.io/Notes-Keeper/",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
@@ -11,6 +12,7 @@
     "@material-ui/lab": "4.0.0-alpha.60",
     "@reduxjs/toolkit": "1.6.1",
     "clsx": "1.1.1",
+    "gh-pages": "^3.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.5",
@@ -27,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "browserslist": [
     ">0.2%",
